--- a/_config.yml
+++ b/_config.yml
@@ -36,15 +36,15 @@ exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.
 
 # Site owner
 owner:
-  name: Your Name
+  name: Parth Wazurkar
   avatar: bio-photo.jpg
-  email: you@email.com
+  email: parthwazurkar@gmail.com
   disqus-shortname:
-  twitter: #username
-  facebook: #username
-  github: #username
+  twitter: parthw1
+  facebook: parth.wazurkar
+  github: parthw1
   stackexchange: #http://stackoverflow.com/users/123456/username
-  linkedin: #username
+  linkedin: parth-wazurkar-169103144
   instagram: #username
   flickr: #username
   tumblr: #username
