--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,16 +1,20 @@
+
 # Site navigation links
 
 - title: About
-  url: /about/
-
-- title: Articles
-  url: /articles/
+  url: /index.html
 
 - title: Blog
   url: /blog/
 
-- title: Theme Setup
-  url: /theme-setup/
+- title: Portfolio
+  url: /blog/
 
+- title: CV
+  url: 
+
+- title: Contact
+  url: /search/
+  
 - title: Search
   url: /search/
