changed favicon images

--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ owner:
   twitter: parthw1
   facebook: parth.wazurkar
   github: parthw1
-  stackexchange: #http://stackoverflow.com/users/123456/username
+  stackexchange: http://stackoverflow.com/users/8440365/parth-wazurkar
   linkedin: parth-wazurkar-169103144
   instagram: #username
   flickr: #username
