--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,14 +7,14 @@
 - title: Blog
   url: /blog/
 
-- title: Portfolio
-  url: /blog/
+- title: My Projects
+  url: /my-projects/
 
 - title: Resume
-  url: 
+  url: /assets/docs/resume.pdf
 
 - title: Contact
   url: /contact/
   
-- title: Search
-  url: /search/
+#- title: Search
+#  url: /search/
