Added googleplus link

--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ owner:
   pinterest: #username
   weibo: #userid
   google:
-    plus: #username
+    plus: ParthWazurkar
     analytics:
     verify:
     ad-client:
