--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,7 +11,7 @@
   url: /my-projects/
 
 - title: Resume
-  url: /assets/docs/resume.pdf
+  url: /assets/docs/parth_resume.pdf
   
 #- title: GITHUB
 #  url: https://github.com/parthw1
