--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,7 @@
   url: /blog/
 
 - title: My Projects
-  url: /my-projects/
+  url: https://github.com/parthw1
 
 - title: Resume
   url: /assets/docs/parth_resume.pdf
