Major changes to the website

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 title: Parth Wazurkar
 locale: en_US
 description: My personal homepage
-#logo: site-logo.png
+#logo: site-logo.pngBlog
 search: true
 #url: http://localhost:4000
 
