--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,6 @@ sudo: false # route your build to the container-based infrastructure for a faste
 
 cache: bundler # caching bundler gem packages will speed up build
 
-# Optional: disable email notifications about the outcome of your builds
+# Optional: disable email notifications about the outcome of your build
 notifications:
   email: false
