--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,8 +10,8 @@
 #- title: My Projects
  # url: https://github.com/parthw1
 
-- title: 📄Resume
-  url: /assets/docs/parth_resume_.pdf
+#- title: 📄Resume
+#  url: /assets/docs/parth_resume_.pdf
   
 #- title: GITHUB
 #  url: https://github.com/parthw1
